# Quote-generation-chatbot

./: .taplo.toml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  config.schema.toml
.cargo/: config.toml
.chglog/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-android.yaml  build-linux.yaml  build-mac.yaml  build-windows.yaml  build.yaml  create-release.yaml  lint.yaml  mark-stale.yaml  release.yml  test-code.yaml
ci/: brew-ci.sh  pkgbuild-ci.sh
completions/: _getquotes  _getquotes.ps1  getquotes.bash  getquotes.elv  getquotes.fish  getquotes.nu
man/: getquotes.1  getquotes.ps1xml
src/: background.rs  cache.rs  cli.rs  config.rs  lib.rs  logger.rs  main.rs  quotes.rs  types.rs
tests/: background_tests.rs  cache_tests.rs  cli_tests.rs  config_full_tests.rs  config_tests.rs  lib_tests.rs  logger_tests.rs  quotes_tests.rs  types_tests.rs
tests/common/: mod.rs
