[package]
name = "getquotes"
version = "0.6.1"
authors = ["MuntasirSZN <muntasir.joypurhat@gmail.com>"]
edition = "2024"
description = "A simple cli tool to get quotes in your terminal using WikiQuotes"
documentation = "https://github.com/MuntasirSZN/getquotes"
readme = "README.md"
repository = "https://github.com/MuntasirSZN/getquotes"
license = "MIT"
keywords = ["cli", "command-line", "quotes", "rust", "wikiquote"]
build = "build.rs"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[dependencies]
clap = { version = "4.5.40", features = [
  "cargo",
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "string",
  "usage",
  "wrap_help",
] }
clap_complete = "4.5.54"
clap_complete_nushell = "4.5.7"
colored = "3.0.0"
git_rev = "0.1.0"
jiff = "0.2.15"
log = "0.4.27"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.23"
urlencoding = "2.1.3"
env_logger = "0.11.8"

[dev-dependencies]
lazy_static = "1.5.0"
mockito = "1.7.0"
tempfile = "3.20.0"

[build-dependencies]
clap = { version = "4.5.40", features = [
  "cargo",
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "string",
  "usage",
  "wrap_help",
] }
clap_complete = "4.5.54"
clap_complete_nushell = "4.5.7"
clap_mangen = "0.2.27"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
